<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity"
    android:gravity="center">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:columnCount="5"
        android:rowCount="5">

        <!-- LIGNE OPERATION / RESULTAT -->
        <TextView
            android:id="@+id/textCalcul"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_columnWeight="0.6"
            android:layout_row="0"
            android:layout_rowWeight="0.2"
            android:hint="@string/text_calcul"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/textResult"
            android:layout_columnSpan="2"
            android:layout_columnWeight="0.4"
            android:layout_row="0"
            android:layout_rowWeight="0.2"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            />

        <!-- LIGNE 1 -->
        <Button
            android:tag="@string/seven"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_rowWeight="0.2"
            android:text="7"
            android:onClick="clickHandler"

            />
        <Button
            android:tag="@string/eight"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_rowWeight="0.2"
            android:text="8"
            android:onClick="clickHandler"
            />
        <Button
            android:tag="@string/nine"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_rowWeight="0.2"
            android:text="9"
            android:onClick="clickHandler"
            />
        <Button
            android:tag="@string/plus"
            android:layout_column="3"
            android:layout_row="1"
            android:layout_rowWeight="0.2"
            android:text="+"
            android:onClick="clickHandler"

            />

         <Button
            android:tag="@string/equal"
            android:layout_column="4"
            android:layout_row="1"
            android:layout_rowWeight="0.2"
            android:layout_rowSpan="4"
            android:text="="
            android:onClick="clickHandler"
            />


        <!-- LIGNE 2 -->

        <Button
            android:tag="@string/four"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_rowWeight="0.2"
            android:text="4"
            android:onClick="clickHandler"
            />
        <Button
            android:tag="@string/five"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_rowWeight="0.2"
            android:text="5"
            android:onClick="clickHandler"
            />
        <Button
            android:tag="@string/six"
            android:layout_column="2"
            android:layout_row="2"
            android:layout_rowWeight="0.2"
            android:text="6"
            android:onClick="clickHandler"
            />
        <Button
            android:tag="@string/minus"
            android:layout_column="3"
            android:layout_row="2"
            android:layout_rowWeight="0.2"
            android:text="-"
            android:onClick="clickHandler"
            />

        <!-- LIGNE 3 -->

        <Button
            android:tag="@string/one"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_rowWeight="0.2"
            android:text="1"
            android:onClick="clickHandler"
            />

        <Button
            android:tag="@string/two"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_rowWeight="0.2"
            android:text="2"
            android:onClick="clickHandler"
            />
        <Button
            android:tag="@string/three"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_rowWeight="0.2"
            android:text="3"
            android:onClick="clickHandler"
            />
        <Button
            android:tag="@string/times"
            android:layout_column="3"
            android:layout_row="3"
            android:layout_rowWeight="0.2"
            android:text="*"
            android:onClick="clickHandler"
            />

        <!-- LIGNE 4 -->
        <Button
            android:tag="@string/zero"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_columnWeight="0.4"
            android:layout_columnSpan="2"
            android:text="0"
            android:onClick="clickHandler"
            />
        <Button
            android:tag="@string/divided"
            android:layout_column="2"
            android:layout_row="4"
            android:layout_columnWeight="0.4"
            android:layout_columnSpan="2"
            android:text="/"
            android:onClick="clickHandler"
            />
    </GridLayout>
</LinearLayout>